<resources>
    <string name="app_name">RAZAR</string>
    <string name="desc_logo_img">Logo application</string>
    <string name="desc_bg_img">BG login</string>
    <string name="section_sign_up_title">Crea una cuenta</string>
    <string name="name_form">Nombre</string>
    <string name="email_form">Correo electrónico</string>
    <string name="password_form">Contraseña</string>
    <string name="confirm_password_form">Confirmar contraseña</string>
    <string name="join_us_button">Unete</string>
    <string name="suggestion_login_social_networks">O accede a través de tus redes sociales</string>
    <string name="suggestion_login">¿Ya estas registrado?</string>
    <string name="suggestion_login_button">Inicia sesión</string>
    <string name="suggestion_register">¿Aún no estas registrado?</string>
    <string name="register_suggestion">Registrate</string>
    <string name="forgot_password_text">¿Olvidaste tu contraseña?</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="tab1">Home</string>
    <string name="tab2">Categories</string>
    <string name="Bookmarks">Tab3</string>
    <string name="tab4">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_search">Busca</string>
    <string name="home_explore">Explora</string>
</resources>
